syntax = "proto3";
package vinhphuctadang.nameservice.nameservice;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "nameservice/params.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/vinhphuctadang/nameservice/x/nameservice/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/vinhphuctadang/nameservice/nameservice/params";
  }
  // Queries a list of Info items.
	rpc Info(QueryInfoRequest) returns (QueryInfoResponse) {
		option (google.api.http).get = "/vinhphuctadang/nameservice/nameservice/info/{name}";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryInfoRequest {
  string name = 1;
}

message QueryInfoResponse {
  string owner = 1;
  string price = 2;
  string forSale = 3;
}

// this line is used by starport scaffolding # 3
